--- a/BoboBee Web/package.json
+++ b/BoboBee Web/package.json
@@ -15,6 +15,8 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@tanstack/react-query": "^5.85.3",
+    "@teachablemachine/pose": "^0.8.6",
+    "@tensorflow/tfjs": "^4.22.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
@@ -37,6 +39,6 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^7.1.12"
   }
 }
